--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -15,6 +15,7 @@
   <ItemGroup>
     <ProjectReference Include="..\DeepSpaceSaga.Common\DeepSpaceSaga.Common.csproj" />
     <ProjectReference Include="..\DeepSpaceSaga.Controller\DeepSpaceSaga.Controller.csproj" />
+    <ProjectReference Include="..\DeepSpaceSaga.UI.Render\DeepSpaceSaga.UI.Render.csproj" />
   </ItemGroup>
 
   <ItemGroup>
