Game session Pause/Resume

--- a/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
+++ b/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\DeepSpaceSaga.Common\DeepSpaceSaga.Common.csproj" />
+  </ItemGroup>
+
 </Project>
