Add base game session generation

--- a/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
+++ b/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
@@ -10,4 +10,8 @@
     <ProjectReference Include="..\DeepSpaceSaga.Common\DeepSpaceSaga.Common.csproj" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Sessions\" />
+  </ItemGroup>
+
 </Project>
