--- a/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
+++ b/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
@@ -10,4 +10,9 @@
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Universe\Entities\CelestialObjects\Asteroids\" />
+    <Folder Include="Universe\Entities\CelestialObjects\Wrecks\" />
+  </ItemGroup>
+
 </Project>
