--- a/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
+++ b/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
@@ -7,6 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
