--- a/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
+++ b/DeepSpaceSaga.Common/DeepSpaceSaga.Common.csproj
@@ -8,6 +8,7 @@
 
   <ItemGroup>
     <PackageReference Include="LanguageExt.Core" Version="4.4.9" />
+    <PackageReference Include="log4net" Version="3.0.3" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
   </ItemGroup>
 
