DSS-30 Basic Calculation UnitTests

--- a/DeepSpaceSaga.Tests/DeepSpaceSaga.Tests.csproj
+++ b/DeepSpaceSaga.Tests/DeepSpaceSaga.Tests.csproj
@@ -17,6 +17,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DeepSpaceSaga.Server\DeepSpaceSaga.Server.csproj" />
     <ProjectReference Include="..\DeepSpaceSaga.UI.Render\DeepSpaceSaga.UI.Render.csproj" />
   </ItemGroup>
 
