--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -10,7 +10,8 @@
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="3.0.3" />
-  </ItemGroup>
+    <PackageReference Include="SkiaSharp" Version="3.116.0" />
+    <PackageReference Include="SkiaSharp.Views.WindowsForms" Version="2.88.9" />  </ItemGroup>
 
   <ItemGroup>
     <ProjectReference Include="..\DeepSpaceSaga.Common\DeepSpaceSaga.Common.csproj" />
