DSS-50 UI Enrich control

--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -32,6 +32,15 @@
     <None Update="Configuration\Version.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Images\Layers\Tactical\asteroid.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\Layers\Tactical\blueprint.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
+    <None Update="Images\Layers\Tactical\spacecraft.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
