--- a/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
+++ b/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
@@ -14,4 +14,8 @@
     <Folder Include="Calculation\DataPostProcessing\" />
   </ItemGroup>
 
+  <ItemGroup>
+    <PackageReference Include="log4net" Version="3.0.3" />
+  </ItemGroup>
+
 </Project>
