DSS-62 Commands Refactoring

--- a/DeepSpaceSaga.Tests/DeepSpaceSaga.Tests.csproj
+++ b/DeepSpaceSaga.Tests/DeepSpaceSaga.Tests.csproj
@@ -19,6 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <ProjectReference Include="..\DeepSpaceSaga.Controller\DeepSpaceSaga.Controller.csproj" />
     <ProjectReference Include="..\DeepSpaceSaga.Server\DeepSpaceSaga.Server.csproj" />
     <ProjectReference Include="..\DeepSpaceSaga.UI.Render\DeepSpaceSaga.UI.Render.csproj" />
   </ItemGroup>
