DSS-68 - Turn Execution Refactoring

--- a/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
+++ b/DeepSpaceSaga.Server/DeepSpaceSaga.Server.csproj
@@ -11,11 +11,15 @@
   </ItemGroup>
 
   <ItemGroup>
-    <Folder Include="Calculation\DataPostProcessing\" />
+    <Folder Include="GameLogicController\Handlers\" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="log4net" Version="3.0.3" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <FrameworkReference Include="Microsoft.AspNetCore.App" />
   </ItemGroup>
 
 </Project>
