DSS-80 Command Open Container + Action - Container generate

--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -42,6 +42,9 @@
     <None Update="Images\Layers\Tactical\blueprint.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Images\Layers\Tactical\container.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Images\Layers\Tactical\PlayerSpaceship.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
