DSS-80 Command Open Container + Action - Add items to container

--- a/DeepSpaceSaga.UI/Configuration/Logs.config
+++ b/DeepSpaceSaga.UI/Configuration/Logs.config
@@ -1,7 +1,7 @@
 ﻿<log4net>
 
   <root>
-    <level value="DEBUG" />
+    <level value="INFO" />
     <appender-ref ref="ColoredConsoleAppender" />
     <appender-ref ref="RollingFileAppender" />
   </root>
