DSS-80 - Command Open Container + Action - Cargo container prototype

--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -68,6 +68,9 @@
     <None Update="Images\Layers\Tactical\spacecraft.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Images\Ore\Iron.png">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Images\Ore\Pombesit.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
