DSSG-52 Base Menu Screen

--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -30,6 +30,9 @@
       <AutoGen>True</AutoGen>
       <DependentUpon>Resources.resx</DependentUpon>
     </Compile>
+    <Compile Update="Screens\GameMenu\GameMenuScreen.cs">
+      <SubType>Form</SubType>
+    </Compile>
   </ItemGroup>
   
 
