DSSG-52 Base Menu Screen

--- a/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
+++ b/DeepSpaceSaga.UI/DeepSpaceSaga.UI.csproj
@@ -71,6 +71,9 @@
     <None Update="Images\Layers\Tactical\spacecraft.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
+    <None Update="Images\MainMenuBackground.jpg">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Update="Images\Ore\Iron.png">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
